fix hill sidebar scrolling on mobile

--- a/hribi-redesign/src/app/hill-map/hill-map.component.css
+++ b/hribi-redesign/src/app/hill-map/hill-map.component.css
@@ -238,6 +238,7 @@
     /* Added to make mobile work */
     position: fixed;
     top: 60px;
+    bottom: 0px;
     right: min(max(-30%, -450px), -320px);
     z-index: 1001;
 
